tests/errors/incomplete-instance/main.pa
# An instance that omits one of the trait`s required methods.
trait greet a {
	hello :: fun a -> string
	bye :: fun a -> string
}
implement greet int {
	def hello = fun x { to-string x }
}

def main = print "x"
